# grimoire-lsp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml
src/: errors.rs  init.rs  lib.rs  logger.rs  lsp.rs  project_root.rs  reference.rs  server_capabilities.rs
src/ctx/: context.rs  database.rs  logger.rs  mod.rs  project_root.rs
src/lsp/: goto.rs  mod.rs
src/models/: file.rs  location.rs  mod.rs  reference.rs
src/parsers/: header_parser.rs  mod.rs  parser.rs  reference_parser.rs
src/repositories/: files_repository.rs  mod.rs  references_repository.rs  repository_builder.rs
src/sample/: README.md  recipes.md
src/services/: mod.rs  reindex.rs
src/subcommands/: init.rs  lsp.rs  mod.rs  reindex.rs
