[package]
name = "grimoire-lsp"
version = "0.1.0"
edition = "2021"
description = "🪄 Grimoire is a personal note-taking tool to keep track of all your magical thoughts"
repository = "https://github.com/lancelafontaine/grimoire-lsp"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
