[package]
name = "grimoire-lsp"
version = "0.1.0"
edition = "2021"
description = "🪄 Grimoire is a personal note-taking tool to keep track of all your magical thoughts"
repository = "https://github.com/lancelafontaine/grimoire-lsp"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.0", features = ["derive"] }
log = "0.4.14"
log4rs = "1.0.0"
lsp-server = "0.5.2"
lsp-types = "0.91.1"
serde = "1.0.132"
serde_json = "1.0.73"
sled = "0.34.7"
tempfile = "3.3.0"
walkdir = "2.3.2"
