[package]
name = "grimoire-lsp"
version = "0.1.0"
edition = "2021"
description = "🪄 Grimoire is a personal note-taking tool to keep track of all your magical thoughts"
repository = "https://github.com/lancelafontaine/grimoire-lsp"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
log4rs = "1.2.0"
lsp-server = "0.5.2"
lsp-types = "0.93.2"
serde = "1.0.150"
serde_json = "1.0.89"
sled = "0.34.7"
tempfile = "3.4.0"
walkdir = "2.3.2"
